deploy/classic-remote/vgpu-manager-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vgpu-manager-scheduler
  name: vgpu-manager-scheduler
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: vgpu-manager-scheduler
  replicas: 1
  template:
    metadata:
      labels:
        vgpu-manager.io/ignore-webhook: "true"
        app: vgpu-manager-scheduler
    spec:
      serviceAccountName: vgpu-manager-scheduler
      # Mark this pod as a critical add-on; when enabled, the critical add-on
      # scheduler reserves resources for critical add-on pods so that they can
      # be rescheduled after a failure.
      # See https://kubernetes.io/docs/tasks/administer-cluster/guaranteed-scheduling-critical-addon-pods/
      priorityClassName: system-node-critical
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
      affinity:
        nodeAffinity:
          # Pod should run as much as possible on control plane nodes.
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
        podAntiAffinity:
          # When there are multiple replicas, try to disperse pods on different nodes as much as possible.
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["vgpu-manager-scheduler"]
                topologyKey: kubernetes.io/hostname
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/google_containers/kube-scheduler:v1.28.15
          imagePullPolicy: IfNotPresent
          name: kube-scheduler
          command:
            - kube-scheduler
            - --config=/config/config.yaml
            - --v=4
          resources:
            requests:
              cpu: 100m
          volumeMounts:
            - name: scheduler-config
              mountPath: /config
          ports:
            - name: https
              containerPort: 10259
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
        - image: ghcr.io/coldzerofear/vgpu-managerlatest
          imagePullPolicy: IfNotPresent
          name: device-scheduler
          command:
            - device-scheduler
            - --domain=nvidia.com
            - --server-bind-port=3456
            - --watch-lease
            - --leader-elect-resource-name=vgpu-manager-scheduler
            - --leader-elect-resource-namespace=kube-system
            - --v=4
          ports:
            - name: http
              containerPort: 3456
          resources: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: scheduler-config
          configMap:
            name: vgpu-manager-scheduler-config
---
apiVersion: v1
kind: Service
metadata:
  name: vgpu-manager-scheduler
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 3456
      protocol: TCP
      targetPort: http
  selector:
    app: vgpu-manager-scheduler
    vgpu-manager.io/scheduler-role: leader
  type: ClusterIP
